# architecture

./: .gitignore  Cargo.toml  README.md  app-spec.json  build.sh
src/: lib.rs  main.rs
src/app/: action.rs  bindings.rs  keys.rs  mod.rs
src/app/ecs/systems/: movement.rs  render.rs
src/app/layers/: game.rs  game_ui.rs  menu.rs  menu_ui.rs  mod.rs  pause.rs
src/core/: action.rs  application.rs  bindings.rs  context.rs  event.rs  layer.rs  log.rs  mod.rs  settings.rs  state.rs  state_manager.rs  time.rs
src/core/ecs/: resources.rs  world.rs
src/core/protocol/: message.rs  mod.rs  snapshot.rs
src/core/transport/: endpoint.rs  error.rs  loopback.rs  mod.rs
src/engine/: action.rs  application.rs  bindings.rs  context.rs  event.rs  layer.rs  mod.rs  settings.rs
src/game/: mod.rs  server_world.rs  world.rs
src/game/ecs/components/: movement.rs  player.rs
src/game/ecs/systems/: mod.rs  movement.rs  snapshot.rs
src/net/: client.rs  config.rs  mod.rs  renet_config.rs  server.rs  server_sim.rs  session.rs  stepper.rs  transport.rs
src/net/protocol/: input.rs  message.rs  mod.rs  snapshot.rs
src/net/transport/: endpoint.rs  error.rs  loopback.rs
src/server/: server.rs
tests/: server_tests.rs  transport_tests.rs
