[package]
name = "architecture"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = { version = "5.5.1", features = [] }
hecs = "0.10.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
renet = "2.0.0"
renet_netcode = "2.0.0"
bitcode = "0.6.9"
ctrlc = { version = "3.5.2", features = ["termination"] }
log = "0.4.29"
simplelog = "0.12.2"
